--- a/App Service/index.html
+++ b/App Service/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #07d1fa 0%, #1f14ec 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%);
             height: 100vh;
             display: flex;
             align-items: center;
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Esta es mi app (STAGING)</h1>
+        <h1>Esta es mi app (PRODUCCIÓN)</h1>
     </div>
 </body>
 </html>
